# oxc-dom-expressions

./: ARCHITECTURE.md  AST_BASED_APPROACH.md  BABEL_ANALYSIS_COMPLETE.md  BABEL_COMPATIBILITY.md  BABEL_COMPATIBILITY_IMPLEMENTATION_PLAN.md  BABEL_COMPATIBILITY_README.md  BABEL_COMPATIBILITY_STATUS.md  BABEL_COMPATIBILITY_TASK_SUMMARY.md  COMPATIBILITY_REPORT.md  CONTRIBUTING.md  Cargo.toml  FINAL_COMPATIBILITY_REPORT.md  FINAL_REFACTORING_REPORT.md  FIXTURE_TEST_STATUS.md  FIX_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MARKER_FIX_SUMMARY.md  MODERN_TRANSFORM_IMPLEMENTATION.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PROGRESS_REPORT.md  PROGRESS_SUMMARY.md  PR_SUMMARY.md  README.md  REFACTORING_AST_APPROACH.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  REFACTORING_TRANSFORM_MODULE.md  SUMMARY.md  TASK_COMPLETION_SUMMARY.md  TASK_VERIFICATION.md  TEST_COVERAGE.md  TEST_INTEGRATION_SUMMARY.md  TRANSFORM_IMPROVEMENTS.md  WORK_COMPLETED_SUMMARY.md  WORK_SUMMARY.md
.github/: copilot-instructions.md
.serena/: project.yml
benches/: transformation_bench.rs
examples/: advanced_usage.rs  basic_usage.rs  debug_text_interpolation.rs  demo_full_features.rs  demo_helper_injection.rs  demo_modern_universal.rs  parse_check.rs  phase2_demo.rs  phase3_demo.rs  phase4_demo.rs  simple_test.rs  test_binding_types.rs  test_compat2.rs  test_complex_helper.rs  test_complex_modern.rs  test_debug_children.rs  test_dynamic.rs  test_helper_injection.rs  test_leading.rs  test_modern_dynamic.rs  test_space.rs  test_text_interp.rs  text_test.rs
(+55 files in other folders)
