[package]
name = "oxc-dom-expressions"
version = "0.1.0"
edition = "2021"
authors = ["nyanrus"]
license = "MIT"
description = "A drop-in replacement of babel-plugin-jsx-dom-expressions for solid-js implemented with oxc in Rust"
repository = "https://github.com/nyanrus/oxc-dom-expressions"
keywords = ["jsx", "solid", "dom", "oxc", "transformer"]
categories = ["development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["opt"]
opt = []

[dependencies]
oxc_allocator = "0.96"
oxc_ast = "0.96"
oxc_span = "0.96"
oxc_traverse = "0.96"
oxc_syntax = "0.96"
oxc_parser = "0.96"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
oxc_parser = "0.96"
oxc_semantic = "0.96"
oxc_codegen = "0.96"
criterion = "0.7"
similar = "2.7"

[[bench]]
name = "transformation_bench"
harness = false
